[gd_scene load_steps=2 format=3 uid="uid://p2n8wpbdrtmx"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_dcdpj"]

[node name="MainMenu" type="Node2D"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = -1.0
offset_right = 637.0
offset_bottom = 360.0
script = ExtResource("1_dcdpj")

[node name="Label" type="Label" parent="Control"]
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -67.5
offset_top = -109.5
offset_right = 100.5
offset_bottom = -86.5
grow_horizontal = 2
grow_vertical = 2
text = "A Silent Whisker"

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
z_index = 1
layout_mode = 0
offset_left = 272.0
offset_top = 120.0
offset_right = 395.0
offset_bottom = 230.0

[node name="Start Button" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="Continue Button" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="Options Button" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Options"

[connection signal="pressed" from="Control/VBoxContainer/Start Button" to="Control" method="_on_start_button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Continue Button" to="Control" method="_on_continue_button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Options Button" to="Control" method="_on_options_button_pressed"]
